--- a/style.css
+++ b/style.css
@@ -24,8 +24,12 @@ body {
     text-align: center;
 }
 
-.table thead{
+.table thead, tbody{
     text-align: center;
+}
+
+#descricao {
+    text-align: left;
 }
 
 
@@ -62,6 +66,21 @@ body {
 .starIcon{
     display: none;
 }
+
+.templateInput{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+/* .templateInput span{
+    color: #495057;
+} */
+
+.form-control {
+    color: #495057 ;
+}
+
+
 
 
 
