--- a/style.css
+++ b/style.css
@@ -11,12 +11,18 @@ body {
     place-items: center;
     height: 100vh;
     width: 100vw;
+    
+    
 }
 
 #lista {
     background: linear-gradient(287.56deg, #c6d4db 0%, #7fa7e7 100%);
     border-radius: 10px;
-    padding: 48px 64px 64px;
+    padding: 48px 64px 48px;
+    box-shadow: 0 1rem 2rem -1rem rgba(0, 0, 0, 1);
+    margin-top: 10px;
+    margin-bottom: 10px;
+    
 }
 
 #lista h1 {
@@ -24,11 +30,11 @@ body {
     text-align: center;
     font-style: italic;
     color: #475e64;
+    text-decoration: 1px  underline;
 }
 
 .cabecalho{
     display: flex;
-    
     background-color: #cbcecc79;
     border-radius: 8px;
     height: 35px;
@@ -37,16 +43,19 @@ body {
 .labelCheckbox{
     position:initial;
     width: fit-content;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     display: flex;
-    font-size: 15px;
+    font-size: 13px;
     white-space: nowrap;
-    align-items: center;
+    /* align-items: center; */
     text-align: center;
-    border-radius: 8px 8px 8px 8px;
-    gap: 3px;
+    gap: 5px;
     color: #475e64;
     font-style: italic;
+    
+    border-radius: 6px;
+    border: 1px solid white;
+    padding: 0 2px;
     
 }
 
@@ -56,8 +65,8 @@ body {
 
 
 .form-check-input{
-    width: 13px;
-    height: 13px;
+    width: 12px;
+    height: 12px;
 }
 
 .template2{
@@ -77,9 +86,8 @@ body {
     width: 100%;
     height: 35px;
     text-indent: 8px;
-    border: 1px solid #ffffff;
+    border: none;
     border-radius: 8px;
-    
 }
 
 .selectStatus{
@@ -191,4 +199,5 @@ body {
 .valorNaoAceito{
     color: #c51d07e7;
 }
+
 
